<resources>
    <string name="app_name">Shuriken Madness</string>
    <string name="play">Play</string>
    <string name="your_points">Your points:</string>
    <string name="_50">50</string>
    <string name="highest">Highest:</string>
    <string name="_99">99</string>
    <string name="shuriken_madness">Shuriken Madness</string>
    <string name="change_champ">Change Character</string>
</resources>
