<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#e7dfc2"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuriken_madness"
        android:textAlignment="center"
        android:fontFamily="@font/jaro_regular"
        android:layout_gravity="center"
        android:textSize="60sp"/>

    <ImageView
        android:id="@+id/character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ninja0"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/play"
        android:textSize="32sp"
        android:textColor="#e7dfc2"
        android:backgroundTint="#bb8044"
        android:background="@drawable/menu_button"
        android:onClick="startGame"
        android:fontFamily="@font/jaro_regular"
        />

    <Button
        android:id="@+id/change_character_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_champ"
        android:fontFamily="@font/jaro_regular" />

</LinearLayout>
