<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart"
            android:onClick="restartGame" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit"
            android:onClick="exitTheGame"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newHighestScore"
            android:background="@drawable/highest"
            android:visibility="gone" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/your_points"
                    android:textSize="40sp"
                    android:fontFamily="@font/rena_regular" />

                <TextView
                    android:id="@+id/scoredPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:textSize="40sp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:fontFamily="@font/rena_regular"
                     />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest"
                    android:textSize="35sp"
                    android:fontFamily="@font/rena_regular"
                    android:layout_gravity="center|end"/>

                <TextView
                    android:id="@+id/highestScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:fontFamily="@font/rena_regular"
                    android:textColor="@android:color/holo_red_light" />
            </TableRow>

        </TableLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="80dp" />
    </LinearLayout>

</LinearLayout>